--- a/DopodCinema/Module/ShowTime/Cinema/CinemaDetailViewController.xib
+++ b/DopodCinema/Module/ShowTime/Cinema/CinemaDetailViewController.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CinemaDetailViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="dateCollectionView" destination="6DD-ES-jKO" id="zzY-fa-ijz"/>
-                <outlet property="tableView" destination="27L-0t-gwq" id="dBa-rR-zP8"/>
+                <outlet property="timeCollectionView" destination="k8z-gV-Lr0" id="UzL-vh-7la"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,10 +21,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6DD-ES-jKO">
-                    <rect key="frame" x="16" y="0.0" width="382" height="100"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="yHX-TF-d4F"/>
+                        <constraint firstAttribute="height" constant="80" id="yHX-TF-d4F"/>
                     </constraints>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="NGX-HB-xmW">
                         <size key="itemSize" width="128" height="128"/>
@@ -33,20 +33,26 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27L-0t-gwq">
-                    <rect key="frame" x="0.0" y="100" width="414" height="636"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="k8z-gV-Lr0">
+                    <rect key="frame" x="0.0" y="80" width="414" height="656"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vtl-sC-HXM">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <constraints>
-                <constraint firstItem="27L-0t-gwq" firstAttribute="top" secondItem="6DD-ES-jKO" secondAttribute="bottom" id="CRR-sJ-6ju"/>
+                <constraint firstItem="k8z-gV-Lr0" firstAttribute="leading" secondItem="6DD-ES-jKO" secondAttribute="leading" id="0GP-eI-cHQ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="k8z-gV-Lr0" secondAttribute="bottom" id="38D-iy-2Oe"/>
+                <constraint firstItem="k8z-gV-Lr0" firstAttribute="trailing" secondItem="6DD-ES-jKO" secondAttribute="trailing" id="Egr-tY-0BL"/>
                 <constraint firstItem="6DD-ES-jKO" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="F7v-du-v0z"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="6DD-ES-jKO" secondAttribute="trailing" constant="16" id="UNZ-Oi-Jh7"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="27L-0t-gwq" secondAttribute="trailing" id="bNl-Ia-Od4"/>
-                <constraint firstItem="6DD-ES-jKO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="kYI-Tk-FTz"/>
-                <constraint firstItem="27L-0t-gwq" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qzj-6O-Eeu"/>
-                <constraint firstAttribute="bottom" secondItem="27L-0t-gwq" secondAttribute="bottom" id="sSX-Rt-BJd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="6DD-ES-jKO" secondAttribute="trailing" id="UNZ-Oi-Jh7"/>
+                <constraint firstItem="k8z-gV-Lr0" firstAttribute="top" secondItem="6DD-ES-jKO" secondAttribute="bottom" id="fs7-EF-yWL"/>
+                <constraint firstItem="6DD-ES-jKO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="kYI-Tk-FTz"/>
             </constraints>
             <point key="canvasLocation" x="19" y="-11"/>
         </view>
