--- a/DopodCinema/Module/Favorite/SubView/FavoriteActorViewController.xib
+++ b/DopodCinema/Module/Favorite/SubView/FavoriteActorViewController.xib
@@ -12,6 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteActorViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="SRl-s5-0lD" id="0n5-bi-xn9"/>
+                <outlet property="emptyLabel" destination="v5F-LQ-9Ue" id="xfc-FV-U9V"/>
+                <outlet property="emptyView" destination="2oX-nb-vXO" id="2Iy-d6-xb9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,12 +32,58 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2oX-nb-vXO">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <subviews>
+                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XVH-RU-vAj">
+                            <rect key="frame" x="97.666666666666686" y="235.33333333333334" width="219" height="265.33333333333326"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_fav_empty" translatesAutoresizingMaskIntoConstraints="NO" id="sts-Jg-Lwk">
+                                    <rect key="frame" x="16" y="8" width="187" height="187"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="187" id="a9t-9a-OrI"/>
+                                        <constraint firstAttribute="width" constant="187" id="glf-t5-tiu"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5F-LQ-9Ue">
+                                    <rect key="frame" x="16" y="210.99999999999997" width="187" height="38.333333333333343"/>
+                                    <string key="text">Add your Favorite
+Movie, TV Show or Actor</string>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="v5F-LQ-9Ue" secondAttribute="bottom" constant="16" id="524-Kc-2fl"/>
+                                <constraint firstItem="sts-Jg-Lwk" firstAttribute="centerX" secondItem="XVH-RU-vAj" secondAttribute="centerX" id="KuV-eG-shs"/>
+                                <constraint firstItem="v5F-LQ-9Ue" firstAttribute="centerX" secondItem="sts-Jg-Lwk" secondAttribute="centerX" id="VdE-bI-hML"/>
+                                <constraint firstItem="v5F-LQ-9Ue" firstAttribute="trailing" secondItem="sts-Jg-Lwk" secondAttribute="trailing" id="jiB-b5-PEJ"/>
+                                <constraint firstItem="sts-Jg-Lwk" firstAttribute="top" secondItem="XVH-RU-vAj" secondAttribute="top" constant="8" id="kgR-D4-RTq"/>
+                                <constraint firstItem="sts-Jg-Lwk" firstAttribute="leading" secondItem="XVH-RU-vAj" secondAttribute="leading" constant="16" id="kuB-Xx-oAe"/>
+                                <constraint firstItem="v5F-LQ-9Ue" firstAttribute="leading" secondItem="sts-Jg-Lwk" secondAttribute="leading" id="rao-De-v9z"/>
+                                <constraint firstItem="v5F-LQ-9Ue" firstAttribute="top" secondItem="sts-Jg-Lwk" secondAttribute="bottom" constant="16" id="sht-TV-ggd"/>
+                                <constraint firstAttribute="trailing" secondItem="sts-Jg-Lwk" secondAttribute="trailing" constant="16" id="y4h-tc-gIT"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="XVH-RU-vAj" firstAttribute="centerY" secondItem="2oX-nb-vXO" secondAttribute="centerY" id="MgG-7A-R0x"/>
+                        <constraint firstItem="XVH-RU-vAj" firstAttribute="centerX" secondItem="2oX-nb-vXO" secondAttribute="centerX" id="NvR-HV-eoz"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="SRl-s5-0lD" secondAttribute="bottom" id="0wa-ZS-RBX"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2oX-nb-vXO" secondAttribute="bottom" id="9gQ-ee-y5P"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2oX-nb-vXO" secondAttribute="trailing" id="Fvg-4t-jec"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SRl-s5-0lD" secondAttribute="trailing" id="TBf-tc-dAN"/>
+                <constraint firstItem="2oX-nb-vXO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cLC-4M-Vtc"/>
+                <constraint firstItem="2oX-nb-vXO" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="lVr-MN-1gw"/>
                 <constraint firstItem="SRl-s5-0lD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="nJD-rs-qbX"/>
                 <constraint firstItem="SRl-s5-0lD" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="v2y-hZ-Zib"/>
             </constraints>
@@ -43,6 +91,7 @@
         </view>
     </objects>
     <resources>
+        <image name="ic_fav_empty" width="157" height="157"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
