--- a/DopodCinema/Module/Movie/MovieList/MovieListViewController.xib
+++ b/DopodCinema/Module/Movie/MovieList/MovieListViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieListViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="Qct-MT-3Lz" id="VWA-oe-HgT"/>
+                <outlet property="loadingView" destination="Krw-fd-bB8" id="jCL-V6-bz0"/>
                 <outlet property="topConstraint" destination="VPu-sj-xwl" id="AiQ-T2-5Us"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -33,13 +34,18 @@
                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </collectionViewFlowLayout>
                         </collectionView>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Krw-fd-bB8">
+                            <rect key="frame" x="197" y="686" width="20" height="20"/>
+                        </activityIndicatorView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="Qct-MT-3Lz" firstAttribute="leading" secondItem="n3C-Hz-aww" secondAttribute="leading" id="GGy-r6-pdW"/>
                         <constraint firstAttribute="bottom" secondItem="Qct-MT-3Lz" secondAttribute="bottom" id="HCW-j7-hsZ"/>
+                        <constraint firstItem="Krw-fd-bB8" firstAttribute="centerX" secondItem="Qct-MT-3Lz" secondAttribute="centerX" id="LkQ-zm-98P"/>
                         <constraint firstAttribute="trailing" secondItem="Qct-MT-3Lz" secondAttribute="trailing" id="Oej-sO-6Fo"/>
                         <constraint firstItem="Qct-MT-3Lz" firstAttribute="top" secondItem="n3C-Hz-aww" secondAttribute="top" id="d2d-im-A1o"/>
+                        <constraint firstAttribute="bottom" secondItem="Krw-fd-bB8" secondAttribute="bottom" constant="30" id="vDT-mo-PuW"/>
                     </constraints>
                 </view>
             </subviews>
