--- a/DopodCinema/Module/TV/TVDetail/TVDetailViewController.xib
+++ b/DopodCinema/Module/TV/TVDetail/TVDetailViewController.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,6 +13,8 @@
             <connections>
                 <outlet property="genresLabel" destination="jY4-NF-a9P" id="5a7-3C-b4j"/>
                 <outlet property="nameLabel" destination="I4a-dV-Aus" id="T08-IV-AZf"/>
+                <outlet property="playLabel" destination="Hv8-eH-csF" id="aLG-na-nT3"/>
+                <outlet property="playView" destination="Wuo-9O-LGG" id="HEL-KW-8Sk"/>
                 <outlet property="posterImageView" destination="rA3-1N-T16" id="IXQ-lv-yX3"/>
                 <outlet property="ratingLabel" destination="Kyh-Rm-bIB" id="MXK-KK-e30"/>
                 <outlet property="timeLabel" destination="tIB-2N-vhc" id="oIT-zn-E6Q"/>
@@ -36,6 +39,24 @@
                                         <constraint firstAttribute="width" secondItem="rA3-1N-T16" secondAttribute="height" multiplier="3:4" id="fpn-hr-tVq"/>
                                     </constraints>
                                 </imageView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wuo-9O-LGG">
+                                    <rect key="frame" x="140" y="396.66666666666669" width="134" height="36"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hv8-eH-csF">
+                                            <rect key="frame" x="46.333333333333343" y="7.9999999999999982" width="41.333333333333343" height="20.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="Hv8-eH-csF" firstAttribute="centerX" secondItem="Wuo-9O-LGG" secondAttribute="centerX" id="Hdv-1E-cP6"/>
+                                        <constraint firstAttribute="width" constant="134" id="NS5-nB-rwp"/>
+                                        <constraint firstItem="Hv8-eH-csF" firstAttribute="centerY" secondItem="Wuo-9O-LGG" secondAttribute="centerY" id="fNa-qY-ngR"/>
+                                        <constraint firstAttribute="height" constant="36" id="fXh-EN-oOi"/>
+                                    </constraints>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4a-dV-Aus">
                                     <rect key="frame" x="16" y="466.66666666666669" width="382" height="20.333333333333314"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -115,11 +136,13 @@
                                 <constraint firstItem="jY4-NF-a9P" firstAttribute="top" secondItem="I4a-dV-Aus" secondAttribute="bottom" constant="8" id="4h6-sQ-ZOv"/>
                                 <constraint firstAttribute="trailing" secondItem="I4a-dV-Aus" secondAttribute="trailing" constant="16" id="AcO-Ye-BUL"/>
                                 <constraint firstItem="6bg-se-emK" firstAttribute="centerX" secondItem="PWi-br-6Qf" secondAttribute="centerX" id="HPF-gP-2mk"/>
+                                <constraint firstItem="Wuo-9O-LGG" firstAttribute="bottom" secondItem="rA3-1N-T16" secondAttribute="bottom" constant="-18" id="KwC-bC-uP1"/>
                                 <constraint firstItem="rA3-1N-T16" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" constant="44" id="OsT-Gp-CXA"/>
                                 <constraint firstItem="rA3-1N-T16" firstAttribute="top" secondItem="PWi-br-6Qf" secondAttribute="top" constant="16" id="c0Q-jY-bDP"/>
                                 <constraint firstItem="6bg-se-emK" firstAttribute="top" secondItem="jY4-NF-a9P" secondAttribute="bottom" constant="8" id="f07-DX-u0r"/>
                                 <constraint firstItem="jY4-NF-a9P" firstAttribute="trailing" secondItem="I4a-dV-Aus" secondAttribute="trailing" id="hOU-7J-rSg"/>
                                 <constraint firstItem="jY4-NF-a9P" firstAttribute="leading" secondItem="I4a-dV-Aus" secondAttribute="leading" id="m0f-NS-DeP"/>
+                                <constraint firstItem="Wuo-9O-LGG" firstAttribute="centerX" secondItem="PWi-br-6Qf" secondAttribute="centerX" id="oyt-v8-Ybf"/>
                                 <constraint firstItem="I4a-dV-Aus" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" constant="16" id="tXl-JJ-tAE"/>
                                 <constraint firstItem="I4a-dV-Aus" firstAttribute="top" secondItem="rA3-1N-T16" secondAttribute="bottom" constant="16" id="wnd-kJ-6jh"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6bg-se-emK" secondAttribute="bottom" id="z5X-Dt-yxc"/>
@@ -150,5 +173,8 @@
     <resources>
         <image name="ic_star" width="16" height="16"/>
         <image name="ic_time" width="16" height="16"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
