--- a/DopodCinema/Module/Actor/SearchActor/SearchActorViewController.xib
+++ b/DopodCinema/Module/Actor/SearchActor/SearchActorViewController.xib
@@ -11,6 +11,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchActorViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="SmA-KR-lZV" id="EDI-MA-phi"/>
+                <outlet property="emptySearchLabel" destination="fFY-j3-IwQ" id="dZb-7Y-EAG"/>
+                <outlet property="emptySearchView" destination="5OQ-3I-iEw" id="oR3-bJ-l1B"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -29,11 +31,41 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5OQ-3I-iEw">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_round-saved-search" translatesAutoresizingMaskIntoConstraints="NO" id="sGm-tI-3hs">
+                            <rect key="frame" x="113.66666666666669" y="244.66666666666663" width="187" height="187"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="187" id="XAm-cY-1ac"/>
+                                <constraint firstAttribute="height" constant="187" id="t2w-UF-HeK"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search your Movie, TV Show or Actor" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFY-j3-IwQ">
+                            <rect key="frame" x="113.66666666666669" y="449.66666666666669" width="187" height="40.666666666666686"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="sGm-tI-3hs" firstAttribute="centerX" secondItem="5OQ-3I-iEw" secondAttribute="centerX" id="Gkm-pA-Y3A"/>
+                        <constraint firstItem="sGm-tI-3hs" firstAttribute="centerY" secondItem="5OQ-3I-iEw" secondAttribute="centerY" constant="-30" id="JhD-XC-Cef"/>
+                        <constraint firstItem="fFY-j3-IwQ" firstAttribute="top" secondItem="sGm-tI-3hs" secondAttribute="bottom" constant="18" id="KRa-N4-4zE"/>
+                        <constraint firstItem="fFY-j3-IwQ" firstAttribute="trailing" secondItem="sGm-tI-3hs" secondAttribute="trailing" id="aVF-BS-lhs"/>
+                        <constraint firstItem="fFY-j3-IwQ" firstAttribute="leading" secondItem="sGm-tI-3hs" secondAttribute="leading" id="gIb-Nv-PsD"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="5OQ-3I-iEw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7Xf-1w-gtm"/>
+                <constraint firstItem="5OQ-3I-iEw" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="8D0-Sf-sYk"/>
+                <constraint firstItem="5OQ-3I-iEw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="AmF-cC-z8m"/>
                 <constraint firstItem="SmA-KR-lZV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="C82-HU-cxs"/>
+                <constraint firstItem="5OQ-3I-iEw" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="IRv-yL-a9T"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SmA-KR-lZV" secondAttribute="trailing" id="ZMr-hv-iWa"/>
                 <constraint firstItem="SmA-KR-lZV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="pAi-fa-K7F"/>
                 <constraint firstAttribute="bottom" secondItem="SmA-KR-lZV" secondAttribute="bottom" id="vzl-ck-mJm"/>
@@ -41,4 +73,7 @@
             <point key="canvasLocation" x="131" y="-11"/>
         </view>
     </objects>
+    <resources>
+        <image name="ic_round-saved-search" width="187" height="187"/>
+    </resources>
 </document>
