--- a/DopodCinema/Module/Search/SubView/SearchDataViewController.xib
+++ b/DopodCinema/Module/Search/SubView/SearchDataViewController.xib
@@ -12,6 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchDataViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="e5v-qg-swi" id="XLT-lO-BId"/>
+                <outlet property="emptySearchLabel" destination="axe-er-VGQ" id="qCr-gZ-ZXi"/>
+                <outlet property="emptySearchView" destination="gKc-Pk-sMl" id="lkv-xz-YXJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,19 +32,50 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gKc-Pk-sMl">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_round-saved-search" translatesAutoresizingMaskIntoConstraints="NO" id="Co1-cz-DDM">
+                            <rect key="frame" x="113.66666666666669" y="244.66666666666663" width="187" height="187"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="187" id="YNf-JA-KJc"/>
+                                <constraint firstAttribute="width" constant="187" id="axz-qm-smr"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search your Movie, TV Show or Actor" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axe-er-VGQ">
+                            <rect key="frame" x="113.66666666666669" y="449.66666666666669" width="187" height="40.666666666666686"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="Co1-cz-DDM" firstAttribute="centerX" secondItem="gKc-Pk-sMl" secondAttribute="centerX" id="2Zj-ot-567"/>
+                        <constraint firstItem="axe-er-VGQ" firstAttribute="top" secondItem="Co1-cz-DDM" secondAttribute="bottom" constant="18" id="ADK-dF-zRW"/>
+                        <constraint firstItem="axe-er-VGQ" firstAttribute="leading" secondItem="Co1-cz-DDM" secondAttribute="leading" id="Toj-cL-qqU"/>
+                        <constraint firstItem="Co1-cz-DDM" firstAttribute="centerY" secondItem="gKc-Pk-sMl" secondAttribute="centerY" constant="-30" id="jBi-IW-D0Y"/>
+                        <constraint firstItem="axe-er-VGQ" firstAttribute="trailing" secondItem="Co1-cz-DDM" secondAttribute="trailing" id="vUW-S7-FX3"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="e5v-qg-swi" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="8Mc-Ya-hbd"/>
+                <constraint firstItem="gKc-Pk-sMl" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="9tM-cH-vxu"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gKc-Pk-sMl" secondAttribute="trailing" id="UYN-OJ-UIf"/>
+                <constraint firstItem="gKc-Pk-sMl" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="YhK-4m-Q47"/>
                 <constraint firstItem="e5v-qg-swi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="i97-oe-LbK"/>
                 <constraint firstAttribute="bottom" secondItem="e5v-qg-swi" secondAttribute="bottom" id="wcn-Br-mUC"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="gKc-Pk-sMl" secondAttribute="bottom" id="xgu-Hw-pqh"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="e5v-qg-swi" secondAttribute="trailing" id="yyz-MK-ARq"/>
             </constraints>
-            <point key="canvasLocation" x="131" y="-11"/>
+            <point key="canvasLocation" x="130.43478260869566" y="-11.413043478260871"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_round-saved-search" width="187" height="187"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
