--- a/DopodCinema/Module/TVSeason/EpisodeOverViewScreen.xib
+++ b/DopodCinema/Module/TVSeason/EpisodeOverViewScreen.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TVSeasonOverViewScreen" customModule="DopodCinema" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EpisodeOverViewScreen" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="heightStartingView" destination="DZd-cd-XQ4" id="GJz-Ir-pYB"/>
                 <outlet property="nameLabel" destination="I4a-dV-Aus" id="T08-IV-AZf"/>
