--- a/DopodCinema/Module/Youtube/YoutubeViewController.xib
+++ b/DopodCinema/Module/Youtube/YoutubeViewController.xib
@@ -24,7 +24,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zmU-qk-NpL">
                     <rect key="frame" x="0.0" y="48" width="414" height="848"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DN0-91-Wrp" customClass="YouTubePlayerView" customModule="YouTubePlayer">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DN0-91-Wrp" customClass="YouTubePlayerView" customModule="DopodCinema" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="307.5" width="414" height="233"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
